--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==0.5.0
 Django==3.1.7
 django-bootstrap-datepicker-plus==3.0.5
 django-bootstrap3==14.2.0
+django-environ==0.9.0
 django-filter==2.4.0
 django-heroku==0.3.1
 gunicorn==20.0.4
